assets/styles/tab/show.css
.tab-information {
    padding: 20px;
}

.tab-information .link {
    text-decoration: none;
}

.table {
    border-collapse: collapse;
    margin-top: 20px;
}

.table th,
.table td {
    padding: 8px;
}

.table th {
    text-align: left;
}

.edit-link:hover {
    text-decoration: underline;
}

.tab-content {
    padding: 15px;
    border-radius: 5px;
    font-size: 14px;
    line-height: 1.5;
    overflow-x: auto;
    white-space: pre-wrap;
}

